--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,16 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-      "angular-ui-router":"0.2.13"
+    "angular-ui-router": "0.2.13",
+    "ng-file-upload": "~2.1.1",
+    "ng-bs-daterangepicker": "~0.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
     "angular-scenario": "~1.3.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "bootstrap": "^3.2.0"
+  }
 }
