--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-touch": "^1.3.0",
     "angular-ui-router": "0.2.13",
     "ng-file-upload": "~2.1.1",
-    "ng-bs-daterangepicker": "~0.0.3"
+    "ng-bs-daterangepicker": "~0.0.3",
+    "angular-bootstrap": "~0.12.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
@@ -23,6 +24,7 @@
   },
   "appPath": "app",
   "resolutions": {
-    "bootstrap": "^3.2.0"
+    "bootstrap": "^3.2.0",
+    "angular": "^1.3.0"
   }
 }
