--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "angular-ui-router": "0.2.13",
     "ng-file-upload": "~2.1.1",
     "ng-bs-daterangepicker": "~0.0.3",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-ui-map": "~0.5.0",
+    "angular-ui-utils": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
