--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
   "appPath": "app",
   "resolutions": {
     "bootstrap": "^3.2.0",
-    "angular": "^1.3.0"
+    "angular": "^1.3.0",
+    "angular-ui-utils": "~0.2.1"
   }
 }
