--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "ng-bs-daterangepicker": "~0.0.3",
     "angular-bootstrap": "~0.12.0",
     "angular-ui-map": "~0.5.0",
-    "angular-ui-utils": "~0.2.1"
+    "angular-ui-utils": "~0.2.1",
+    "bootstrap-sweetalert": "~0.4.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
