--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-ui-map": "~0.5.0",
     "angular-ui-utils": "~0.2.1",
     "bootstrap-sweetalert": "~0.4.3",
-    "angucomplete": "*"
+    "angucomplete": "*",
+    "angucomplete-alt": "~0.0.36"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
